--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "redux-debounced": "^0.5.0",
     "redux-thunk": "^2.3.0",
     "simple-line-icons": "^2.4.1",
+    "store2": "^2.11.2",
     "uuid": "^3.3.2",
     "yup": "^0.26.6"
   },
